objects/Elite__c.object
<CustomObject><fields>
        <fullName>EndDate__c</fullName>
        <description>End Date</description>
        <label>终止日</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ParentElitesGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>hierarchy structure 上级集团</description>
        <label>上级集团</label>
        <referenceTo>Elite__c</referenceTo>
        <relationshipLabel>上级精英集团</relationshipLabel>
        <relationshipName>ParentEliteGroup</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Sequences__c</fullName>
        <description>届别 or Sequences</description>
        <inlineHelpText>届别 or Sequences</inlineHelpText>
        <label>届别</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>StartDate__c</fullName>
        <description>StartDate</description>
        <label>成立日</label>
        <type>Date</type>
    </fields><fields>
        <fullName>age__c</fullName>
        <formula>YEAR(TODAY())-YEAR(StartDate__c) + IF(MONTH(TODAY())  &gt;=  MONTH(StartDate__c), 0, -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>团龄</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>精英集团 的 类别
e.g. 中共中央</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>精英集团</label><nameField>
        <label>集团名称</label>
        <type>Text</type>
    </nameField><pluralLabel>精英集团</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ParentElitesGroup__c</columns>
        <columns>age__c</columns>
        <columns>Sequences__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>